# Building-web-APIs-with-Rust

./: .gitignore  README.md  Readme.md
app/: Cargo.toml  database.sqlite
app/migrations/2021-12-18-215019_create_rustaceans/: up.sql
app/src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
