[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.130"
base64 = "0.13"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]
